unpackaged/main/default/objects/Exception_Guidlines__c/Exception_Guidlines__c.object-meta.xml
<CustomObject>
    <label>Exception Guidelines</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Exception Guidelines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Guidelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>