unpackaged/main/default/objects/Exception_Guidlines__c/fields/Add_Billing_Division_No_Chg_Lives_Rates__c.field-meta.xml
<CustomField>
    <fullName>Add_Billing_Division_No_Chg_Lives_Rates__c</fullName>
    <inlineHelpText>Add Billing Division and there is no change to enrolled eligible live or billed rates. Fast Track if yes</inlineHelpText>
    <label>Add Billing Division,No Chg Lives/Rates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>