unpackaged/main/default/objects/Exception_Guidlines__c/fields/Adding_New_Subsidiary_Or_Division__c.field-meta.xml
<CustomField>
    <fullName>Adding_New_Subsidiary_Or_Division__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adding New Subsidiary Or Division</label>
    <type>Checkbox</type>
</CustomField>