unpackaged/main/default/objects/Exception_Guidlines__c/fields/All_Afected_Emp_Have_Been_Are_Working__c.field-meta.xml
<CustomField>
    <fullName>All_Afected_Emp_Have_Been_Are_Working__c</fullName>
    <inlineHelpText>All Affected Employees have been and currently are actively at work.  (If No, must go to GUR, and Claims)</inlineHelpText>
    <label>All Affected Emp Have Been &amp; Are Working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>