unpackaged/main/default/objects/Exception_Guidlines__c/fields/Anniversary_or_Renewal_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_or_Renewal_Date_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anniversary or Renewal Date Change</label>
    <type>Checkbox</type>
</CustomField>