unpackaged/main/default/objects/Exception_Guidlines__c/fields/Anniversary_or_Renewal_Date_In_Same_Year__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_or_Renewal_Date_In_Same_Year__c</fullName>
    <inlineHelpText>Anniversary or Renewal date Change Within Same Calendar Year</inlineHelpText>
    <label>Anniversary or Renewal Date In Same Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>