unpackaged/main/default/objects/Exception_Guidlines__c/fields/Any_Denied_Claims_Impacted_By_Decision__c.field-meta.xml
<CustomField>
    <fullName>Any_Denied_Claims_Impacted_By_Decision__c</fullName>
    <label>Any Denied Claims Impacted By Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>