unpackaged/main/default/objects/Exception_Guidlines__c/fields/Any_Open_Claims_Impacted_by_Decision__c.field-meta.xml
<CustomField>
    <fullName>Any_Open_Claims_Impacted_by_Decision__c</fullName>
    <label>Any Open Claims Impacted by Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>