unpackaged/main/default/objects/Exception_Guidlines__c/fields/Any_unfiled_Pending_Claims_by_Employees__c.field-meta.xml
<CustomField>
    <fullName>Any_unfiled_Pending_Claims_by_Employees__c</fullName>
    <inlineHelpText>Are there any pending claims which have not been sent by the affected employees</inlineHelpText>
    <label>Any Unfiled Pending Claims by Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>