unpackaged/main/default/objects/Exception_Guidlines__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Paid</fullName>
            </value>
            <value>
                <fullName>Employer Paid</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>