unpackaged/main/default/objects/Exception_Guidlines__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <formula>Case__r.Owner:User.FirstName &amp; &#39; &#39; &amp;Case__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>