unpackaged/main/default/objects/Exception_Guidlines__c/fields/Change_Class_Name_No_Chg_Provision_Lives__c.field-meta.xml
<CustomField>
    <fullName>Change_Class_Name_No_Chg_Provision_Lives__c</fullName>
    <inlineHelpText>Class Name Change Only - Fast Track if Yes</inlineHelpText>
    <label>Change Class Name,No Chg Provision/Lives</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>