unpackaged/main/default/objects/Exception_Guidlines__c/fields/Changing_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Changing_Class_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changing Class Name</label>
    <type>Checkbox</type>
</CustomField>