unpackaged/main/default/objects/Exception_Guidlines__c/fields/Chg_Class_Name_No_Chg_Provisions_r_Lives__c.field-meta.xml
<CustomField>
    <fullName>Chg_Class_Name_No_Chg_Provisions_r_Lives__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Changing Class Name but no change to plan provisions or enrolled/eligible lives</inlineHelpText>
    <label>Chg Class Name No Chg Provisions r Lives</label>
    <type>Checkbox</type>
</CustomField>