unpackaged/main/default/objects/Exception_Guidlines__c/fields/Chg_Class_Name_Retro_Ok_No_chg_to_Risk__c.field-meta.xml
<CustomField>
    <fullName>Chg_Class_Name_Retro_Ok_No_chg_to_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Retro is ok because there is no change to risks</inlineHelpText>
    <label>Chg Class Name Retro Ok No chg to Risk</label>
    <type>Checkbox</type>
</CustomField>