unpackaged/main/default/objects/Exception_Guidlines__c/fields/Claims_Checked_Unpaid_Pending_Denied_clm__c.field-meta.xml
<CustomField>
    <fullName>Claims_Checked_Unpaid_Pending_Denied_clm__c</fullName>
    <label>Claims Checked Unpaid,Pending&amp;Denied clm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>