unpackaged/main/default/objects/Exception_Guidlines__c/fields/Claims_Notes__c.field-meta.xml
<CustomField>
    <fullName>Claims_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claims Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>