unpackaged/main/default/objects/Exception_Guidlines__c/fields/Claims_Potential_Risk_in_play__c.field-meta.xml
<CustomField>
    <fullName>Claims_Potential_Risk_in_play__c</fullName>
    <label>Claims Potential Risk in play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>