unpackaged/main/default/objects/Exception_Guidlines__c/fields/Contract_Supports_Change__c.field-meta.xml
<CustomField>
    <fullName>Contract_Supports_Change__c</fullName>
    <label>Contract Supports Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>