unpackaged/main/default/objects/Exception_Guidlines__c/fields/Current_Lives__c.field-meta.xml
<CustomField>
    <fullName>Current_Lives__c</fullName>
    <label>Current Lives</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>