unpackaged/main/default/objects/Exception_Guidlines__c/fields/Denied_Claims_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Denied_Claims_Impacted__c</fullName>
    <label>Denied Claims Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>