unpackaged/main/default/objects/Exception_Guidlines__c/fields/Describe_the_Request__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe the Request</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>