unpackaged/main/default/objects/Exception_Guidlines__c/fields/DoWeNeedGroup_Census__c.field-meta.xml
<CustomField>
    <fullName>DoWeNeedGroup_Census__c</fullName>
    <label>Do We Need Group Census</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>