unpackaged/main/default/objects/Exception_Guidlines__c/fields/Effective_Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date of Change</label>
    <type>Date</type>
</CustomField>