unpackaged/main/default/objects/Exception_Guidlines__c/fields/Exception_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Exception_Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>