unpackaged/main/default/objects/Exception_Guidlines__c/fields/Exception_Case_Open__c.field-meta.xml
<CustomField>
    <fullName>Exception_Case_Open__c</fullName>
    <formula>Case__r.IsClosed  &lt;&gt; True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Case Open</label>
    <type>Checkbox</type>
</CustomField>