unpackaged/main/default/objects/Exception_Guidlines__c/fields/Exception_Related_to_New_or_Key_Employee__c.field-meta.xml
<CustomField>
    <fullName>Exception_Related_to_New_or_Key_Employee__c</fullName>
    <inlineHelpText>Is the exception related to a key employee or a special arrangement for a new/recent hire</inlineHelpText>
    <label>Exception Related to New or Key Employee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>