unpackaged/main/default/objects/Exception_Guidlines__c/fields/Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>Exception_Status__c</fullName>
    <label>Exception Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Information Gathering</fullName>
            </value>
            <value>
                <fullName>Pending Final Decision</fullName>
            </value>
            <value>
                <fullName>2nd Review Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
                <isActive>false</isActive>
                <label>Auto Approved</label>
            </value>
            <value>
                <fullName>Exception Team Approved</fullName>
                <isActive>false</isActive>
                <label>Exception Team Approved</label>
            </value>
            <value>
                <fullName>Pending Claims</fullName>
                <isActive>false</isActive>
                <label>Pending Claims</label>
            </value>
            <value>
                <fullName>Pending Relationship</fullName>
                <isActive>false</isActive>
                <label>Pending Relationship</label>
            </value>
            <value>
                <fullName>Pending Underwriting</fullName>
                <isActive>false</isActive>
                <label>Pending Underwriting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>