unpackaged/main/default/objects/Exception_Guidlines__c/fields/Group_Confirmed_No_Expected_Claims_from__c.field-meta.xml
<CustomField>
    <fullName>Group_Confirmed_No_Expected_Claims_from__c</fullName>
    <inlineHelpText>Has Group Confirmed there are no expected claims as a result of this change</inlineHelpText>
    <label>Group Confirmed No Claims from Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>