unpackaged/main/default/objects/Exception_Guidlines__c/fields/Group_Confirmed_No_Unfiled_Claims_From_C__c.field-meta.xml
<CustomField>
    <fullName>Group_Confirmed_No_Unfiled_Claims_From_C__c</fullName>
    <formula>TEXT( Group_Confirmed_No_Expected_Claims_from__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Confirmed No Unfiled Claims Impact</label>
    <type>Text</type>
</CustomField>