unpackaged/main/default/objects/Exception_Guidlines__c/fields/Group_Indicates_Claims_Are_in_Play__c.field-meta.xml
<CustomField>
    <fullName>Group_Indicates_Claims_Are_in_Play__c</fullName>
    <label>Group Indicates Claims Are in Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>