unpackaged/main/default/objects/Exception_Guidlines__c/fields/Group_Paid_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Paid_Through_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Paid Through Date</label>
    <type>Date</type>
</CustomField>