unpackaged/main/default/objects/Exception_Guidlines__c/fields/Group_Requesting_Waiver_of_Premium__c.field-meta.xml
<CustomField>
    <fullName>Group_Requesting_Waiver_of_Premium__c</fullName>
    <label>Group Requesting Waiver/Chg  Premium Due</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>