unpackaged/main/default/objects/Exception_Guidlines__c/fields/GroupsAnnual_Premium__c.field-meta.xml
<CustomField>
    <fullName>GroupsAnnual_Premium__c</fullName>
    <label>Groups Annual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>