unpackaged/main/default/objects/Exception_Guidlines__c/fields/Impacted_Employees_in_CA_or_NY__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Employees_in_CA_or_NY__c</fullName>
    <inlineHelpText>IF Impacted Employees in CA or NY or Different Industry must go to GUR</inlineHelpText>
    <label>Impacted Emp in CA/NY or Dif Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>