unpackaged/main/default/objects/Exception_Guidlines__c/fields/LTD_Affected__c.field-meta.xml
<CustomField>
    <fullName>LTD_Affected__c</fullName>
    <inlineHelpText>LTD Affected. If Yes must go to GUR</inlineHelpText>
    <label>LTD Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>