unpackaged/main/default/objects/Exception_Guidlines__c/fields/Master_Group_Partner__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_Partner__c</fullName>
    <formula>Case__r.Master_Group__r.Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Group Partner</label>
    <type>Text</type>
</CustomField>