unpackaged/main/default/objects/Exception_Guidlines__c/fields/Minimum_Hour_Change__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Hour_Change__c</fullName>
    <inlineHelpText>Minimum Hour Change. If Yes must go to GUR</inlineHelpText>
    <label>Minimum Hour Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>