unpackaged/main/default/objects/Exception_Guidlines__c/fields/More_Than_60_Days_Retroactive__c.field-meta.xml
<CustomField>
    <fullName>More_Than_60_Days_Retroactive__c</fullName>
    <inlineHelpText>If Retro active effective date &gt; 30 days Or (60 Days and a new location) it must go to GUR</inlineHelpText>
    <label>More Than 30 Days Retroactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Pending Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>