unpackaged/main/default/objects/Exception_Guidlines__c/fields/New_Subs_Div_in_Different_State_or_Ind__c.field-meta.xml
<CustomField>
    <fullName>New_Subs_Div_in_Different_State_or_Ind__c</fullName>
    <inlineHelpText>Adding New Subsidiary or Division in Different State or Industry. If Yes must go to GUR</inlineHelpText>
    <label>New Subs/Div in Different State or Ind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>