unpackaged/main/default/objects/Exception_Guidlines__c/fields/New_Subsidiary_Division_With_Employees__c.field-meta.xml
<CustomField>
    <fullName>New_Subsidiary_Division_With_Employees__c</fullName>
    <inlineHelpText>New Subsidiary or Division with Employees. If Yes must go to GUR</inlineHelpText>
    <label>New Subsidiary/Division With Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>