unpackaged/main/default/objects/Exception_Guidlines__c/fields/No_Chg_Enrolled_Eligible_Lives_Plan_Rate__c.field-meta.xml
<CustomField>
    <fullName>No_Chg_Enrolled_Eligible_Lives_Plan_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>No Change to Enrolled/Eligible Lives, plan or billed rates.</inlineHelpText>
    <label>No Chg Enrolled/Eligible Lives/Plan/Rate</label>
    <type>Checkbox</type>
</CustomField>