unpackaged/main/default/objects/Exception_Guidlines__c/fields/Number_of_EmployeesAffected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_EmployeesAffected__c</fullName>
    <label>Number of Employees Affected</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>