unpackaged/main/default/objects/Exception_Guidlines__c/fields/Other_Type_of_Request_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_of_Request_Explanation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Type of Request Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>