unpackaged/main/default/objects/Exception_Guidlines__c/fields/Policy_Accommodates_Change__c.field-meta.xml
<CustomField>
    <fullName>Policy_Accommodates_Change__c</fullName>
    <label>Policy Accommodates Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>