unpackaged/main/default/objects/Exception_Guidlines__c/fields/Policy_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Contract_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy/Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>