unpackaged/main/default/objects/Exception_Guidlines__c/fields/Premium_Due__c.field-meta.xml
<CustomField>
    <fullName>Premium_Due__c</fullName>
    <label>Premium Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>