unpackaged/main/default/objects/Exception_Guidlines__c/fields/Premium_Expected__c.field-meta.xml
<CustomField>
    <fullName>Premium_Expected__c</fullName>
    <inlineHelpText>Premium Amount Group is expecting/wanting to pay</inlineHelpText>
    <label>Premium Group Expected</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>