unpackaged/main/default/objects/Exception_Guidlines__c/fields/Premium_Notes__c.field-meta.xml
<CustomField>
    <fullName>Premium_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premium Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>