unpackaged/main/default/objects/Exception_Guidlines__c/fields/Premium_Potential_Risk_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Premium_Potential_Risk_Explanation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premium Potential Risk Explanation</label>
    <type>TextArea</type>
</CustomField>