unpackaged/main/default/objects/Exception_Guidlines__c/fields/Premium_Risk_In_Play__c.field-meta.xml
<CustomField>
    <fullName>Premium_Risk_In_Play__c</fullName>
    <label>Premium Risk In Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>