unpackaged/main/default/objects/Exception_Guidlines__c/fields/Prior_Coverage_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Prior_Coverage_Impacted__c</fullName>
    <label>Prior Coverage Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>