unpackaged/main/default/objects/Exception_Guidlines__c/fields/Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error__c</fullName>
    <label>Processing Error</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>