unpackaged/main/default/objects/Exception_Guidlines__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Worksite</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
                <isActive>false</isActive>
                <label>Disability</label>
            </value>
            <value>
                <fullName>ECR</fullName>
                <isActive>false</isActive>
                <label>ECR</label>
            </value>
            <value>
                <fullName>Life</fullName>
                <isActive>false</isActive>
                <label>Life</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>