unpackaged/main/default/objects/Exception_Guidlines__c/fields/QA_Review_Scrub_Notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Scrub_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Review Scrub Notes</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>