unpackaged/main/default/objects/Exception_Guidlines__c/fields/Reinstatement_Request_Within_15_Days__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Request_Within_15_Days__c</fullName>
    <inlineHelpText>Reinstatement Request Received Within 15 days of delinquency letter date</inlineHelpText>
    <label>Reinstatement Request Within 15 Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>