unpackaged/main/default/objects/Exception_Guidlines__c/fields/Relationship_Potential_Risk_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Potential_Risk_Explanation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Potential Risk Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>