unpackaged/main/default/objects/Exception_Guidlines__c/fields/Relationship_Potentially_in_Play__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Potentially_in_Play__c</fullName>
    <label>Relationship Potentially in Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>