unpackaged/main/default/objects/Exception_Guidlines__c/fields/Relationship_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Reviewer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Reviewer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>