unpackaged/main/default/objects/Exception_Guidlines__c/fields/Request_Wait_Period_Waived_or_Shortened__c.field-meta.xml
<CustomField>
    <fullName>Request_Wait_Period_Waived_or_Shortened__c</fullName>
    <label>Request Wait Period Waived or Shortened</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>