unpackaged/main/default/objects/Exception_Guidlines__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Exception_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>