unpackaged/main/default/objects/Exception_Guidlines__c/fields/Retroactive_Request_Came_From_Claim__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Request_Came_From_Claim__c</fullName>
    <label>Retroactive Request Came From Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>