unpackaged/main/default/objects/Exception_Guidlines__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be in Rsm Role</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Regional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Guidelines</relationshipName>
    <type>Lookup</type>
</CustomField>