unpackaged/main/default/objects/Exception_Guidlines__c/fields/Scrub_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scrub_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scrub Notes</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>