unpackaged/main/default/objects/Exception_Guidlines__c/fields/Shorten_Waiting_Period_to_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Shorten_Waiting_Period_to_30_Days__c</fullName>
    <inlineHelpText>Shorten Waiting Period to 30 days or Yes. If Yes must go to GUR</inlineHelpText>
    <label>Shorten Waiting Period to &lt;= 30 Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>