unpackaged/main/default/objects/Exception_Guidlines__c/fields/Summarize_Decision__c.field-meta.xml
<CustomField>
    <fullName>Summarize_Decision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Summarize the Decision if Needed</inlineHelpText>
    <label>Summarize Decision</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>