unpackaged/main/default/objects/Exception_Guidlines__c/fields/Total_Impact_of_Premium_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Total_Impact_of_Premium_Waiver__c</fullName>
    <label>Total Impact of Premium Waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>