unpackaged/main/default/objects/Exception_Guidlines__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retroactive Eligibility For Members</fullName>
            </value>
            <value>
                <fullName>Group Reinstatement</fullName>
            </value>
            <value>
                <fullName>Retroactive Eligibility or Amendment for Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>