unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Days__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Days__c</fullName>
    <formula>if (ISBLANK(Underwriting_Start_Date__c),0, (5 * ( FLOOR( ( Use_Underwriting_End_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Use_Underwriting_End_Date__c - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( Underwriting_Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Underwriting_Start_Date__c - DATE( 1900, 1, 8), 7 ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Underwriting Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>