unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting End Date</label>
    <type>Date</type>
</CustomField>