unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Findings__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Findings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Findings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>